tests/ui/different_repr.stderr
error: enum must have a `#[repr(usize)]`
 --> tests/ui/different_repr.rs:3:10
  |
3 | #[derive(EnumSelect)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EnumSelect` (in Nightly builds, run with -Z macro-backtrace for more info)
